<resources>
    <string name="app_name">ShareGT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="files">Files</string>
    <string name="audios">Audios</string>
    <string name="filename">Filename</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="stop">Stop</string>
    <string name="close">Close</string>
    <string name="qr_code">QR Code</string>
    <string name="icon">Image</string>
    <string name="logs">Logs</string>
    <string name="clear_logs">clear logs</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_register_here">New user? Register here</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="account_exist">Already have an account? Login</string>
    <string name="create_account">Don\'t have an account? Register</string>
    <string name="address">Address</string>
    <string name="aadhar_number">Aadhar Number</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logout">Logout</string>
    <string name="lorem_ipsum">Dustbin</string>
    <string name="open">open</string>
    <string name="home">home</string>
    <string name="Gallary">Gallary</string>
</resources>