<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/logs"
        android:icon="@drawable/logs"
        app:showAsAction="ifRoom"
        android:title="@string/logs"
        tools:ignore="HardcodedText" />
    <item android:id="@+id/gallary"
        android:icon="@drawable/recent"
        app:showAsAction="ifRoom"
        android:title="@string/Gallary"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView" />
</menu>