<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/black">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="176dp"
        android:layout_height="176dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/icon"/>

    <!-- Email EditText -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_background" />

    <!-- Password EditText with toggle -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_background"
        android:drawableEnd="@drawable/ic_visibility_off"
        android:drawablePadding="8dp" />

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="#FFFFFF" />

    <!-- Register Link -->
    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold" />

</LinearLayout>